k8s-template/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
  - hosts:
    - impermanent.sandbox.cedille.club
    secretName: secret
  rules:
  - host: impermanent.sandbox.cedille.club
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: impermanent-service
            port:
              number: 80
